--- a/FrontEnd/assets/styles/login.css
+++ b/FrontEnd/assets/styles/login.css
@@ -43,10 +43,3 @@
 	color: #3D3D3D;
 	font-weight: 500;
 }
-
-.error-message {
-  color: red;
-  font-size: 14px;
-  margin-top: 1rem;
-  text-align: center;
-}
